--- a/guide/quickstart.html
+++ b/guide/quickstart.html
@@ -9,7 +9,7 @@
     <link rel="modulepreload" href="/OOP-UI/assets/app.c4d5418b.js">
     <link rel="modulepreload" href="/OOP-UI/assets/guide_quickstart.md.36f7967f.lean.js">
     
-    <link rel="icon" href="/favicon.gif">
+    <link rel="icon" href="/OOP-UI/favicon.gif">
   <script id="check-dark-light">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
   </head>
   <body>
