--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/OOP-UI/assets/style.86bd8463.css">
     <link rel="modulepreload" href="/OOP-UI/assets/app.c4d5418b.js">
     
-    <link rel="icon" href="/favicon.gif">
+    <link rel="icon" href="/OOP-UI/favicon.gif">
   <script id="check-dark-light">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
   </head>
   <body>
